Update spacing issues *nitpick*

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -6,85 +6,75 @@ $icon-font-path: '../fonts/';
 
 @import 'lib/variables';
 @import 'lib/mixins';
+@import 'components/puzzle';
 @import 'components/board';
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
 .footer {
-  padding-left: 15px;
-  padding-right: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid $gallery-grey;
+	border-bottom: 1px solid $gallery-grey;
 
   /* Make the masthead heading the same height as the navigation */
-  h3 {
-	margin-top: 0;
-	margin-bottom: 0;
-	line-height: 40px;
-	padding-bottom: 19px;
-  }
+	h3 {
+		margin-top: 0;
+		margin-bottom: 0;
+		line-height: 40px;
+		padding-bottom: 19px;
+	}
 }
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid $gallery-grey;
+	padding-top: 19px;
+	color: #777;
+	border-top: 1px solid $gallery-grey;
 }
 
 .container-narrow > hr {
-  margin: 30px 0;
+	margin: 30px 0;
 }
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
-  border-bottom: 1px solid $gallery-grey;
-  .btn {
-	font-size: 21px;
-	padding: 14px 24px;
-  }
-}
+	text-align: center;
+	border-bottom: 1px solid $gallery-grey;
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-  p + h4 {
-	margin-top: 28px;
-  }
+	.btn {
+		font-size: 21px;
+		padding: 14px 24px;
+	}
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
-	max-width: 730px;
-  }
+	/* Remove the padding we set earlier */
+	.header,
+	.marketing,
+	.footer {
+		padding-left: 0;
+		padding-right: 0;
+	}
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-	padding-left: 0;
-	padding-right: 0;
-  }
+	/* Space out the masthead */
+	.header {
+		margin-bottom: 30px;
+	}
 
-  /* Space out the masthead */
-  .header {
-	margin-bottom: 30px;
-  }
-
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-	border-bottom: 0;
-  }
+	/* Remove the bottom border on the jumbotron for visual effect */
+	.jumbotron {
+		border-bottom: 0;
+	}
 }
